--- a/api-server/api_server.yaml
+++ b/api-server/api_server.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: api-server-site
-        image: getting-started
+        image: 78220b880424
 ---
 apiVersion: v1
 kind: Service
